--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "www.linwg.org.lcardview"
+        applicationId "www.linwg.org.app"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
