--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 28
@@ -11,9 +10,6 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
@@ -31,19 +27,17 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
-publish {
-    userOrg = 'linwg1988'
-    groupId = 'org.linwg1988'
-    artifactId = 'lcardview'
-    publishVersion = '1.5.4'
-    desc = 'A libary user for custom a card view.'
-    website = 'https://github.com/linwg1988/LCardView'
-}
+//apply plugin: 'com.novoda.bintray-release'
+//
+//publish {
+//    userOrg = 'linwg1988'
+//    groupId = 'org.linwg1988'
+//    artifactId = 'lcardview'
+//    publishVersion = '1.5.4'
+//    desc = 'A libary user for custom a card view.'
+//    website = 'https://github.com/linwg1988/LCardView'
+//}
 
