--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.7.10'
 
     repositories {
+        gradlePluginPortal()
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath 'com.novoda:bintray-release:0.9'
+        classpath 'com.android.tools.build:gradle:7.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,10 +21,22 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url "https://jitpack.io" }//必须添加这行
+        maven {
+            allowInsecureProtocol = true
+            url "http://maven.aliyun.com/nexus/content/repositories/releases"
+        }
+        maven { url 'https://oss.sonatype.org/content/repositories/public/' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        mavenCentral()
         jcenter()
-//        maven {
-//            url 'https://dl.bintray.com/linwg1988/maven'
-//        }
+    }
+    tasks.withType(Javadoc) {
+        options{
+            encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
+        }
     }
 }
 
