--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,27 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# signing information # ??ID??8? 3F4853570E4B754B5FFDDA712ECC233F04E06F1A
+signing.keyId=DE977BC7
+signing.password=lylove1314
+signing.secretKeyRingFile=../sering.gpg
+
+# sonatype account
+ossrhUsername=linwengui1988
+ossrhPassword=Lylove1314@cn
+
+PROJ_GROUP=io.github.linwg1988
+PROJ_BASENAME=lcardview-kt
+PROJ_VERSION=1.0.2
+PROJ_WEBSITEURL=https://github.com/linwg1988/LCardView
+PROJ_VCSURL=https://github.com/linwg1988/LCardView.git
+PROJ_URL=https://github.com/linwg1988/LCardView/master
+PROJ_DESCRIPTION=A libary uses for browsing image detail.
+
+DEVELOPER_ID=linwg1988
+DEVELOPER_NAME=linwg1988
+DEVELOPER_EMAIL=273512894@qq.com
+
+sonartypeStaging=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
+sonatypeSnapshots=https://s01.oss.sonatype.org/content/repositories/snapshots/
