--- a/gradle.properties
+++ b/gradle.properties
@@ -20,12 +20,12 @@ signing.password=lylove1314
 signing.secretKeyRingFile=../sering.gpg
 
 # sonatype account
-ossrhUsername=linwengui1988
-ossrhPassword=Lylove1314@cn
+ossrhUsername=***
+ossrhPassword=***
 
 PROJ_GROUP=io.github.linwg1988
 PROJ_BASENAME=lcardview-kt
-PROJ_VERSION=1.0.2
+PROJ_VERSION=1.0.3
 PROJ_WEBSITEURL=https://github.com/linwg1988/LCardView
 PROJ_VCSURL=https://github.com/linwg1988/LCardView.git
 PROJ_URL=https://github.com/linwg1988/LCardView/master
